--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
 </head>
 
 <body>
+  <form id="entrada-bar" onsubmit="return false;">
+    <input type="text" placeholder="Ingrese tu nombre" id="nombre-usuario" />
+    <input type="number" placeholder="Ingrese su edad" id="edad-usuario" />
+    <button id="ingresar">Ingresar al bar</button>
+  </form>
+ 
+  <div id="resultado"></div>
+
   <header>
     <h1>Hola!</h1>
     <h2>Escribamos un poco de código el día de hoy!</h2>
@@ -17,10 +25,13 @@
 
   <main>
     <div>
-      <p>En <a href="https://www.google.com/chrome/">Chrome</a> y <a href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a>,
-        para abrir la <i>Consola del navegador</i>, click derecho en esta página y seleccionen <i>'Inspect'</i>. La consola va a aparecer
-          abajo o a la derecha de la pantalla.
-      <p>Si estás listos para probar un atajo del teclado, apretá <i>'<abbr title="Command">CMD</abbr>+<abbr title="Option">OPT</abbr>+J'</i>
+      <p>En <a href="https://www.google.com/chrome/">Chrome</a> y <a
+          href="https://www.mozilla.org/en-GB/firefox/new/">Firefox</a>,
+        para abrir la <i>Consola del navegador</i>, click derecho en esta página y seleccionen <i>'Inspect'</i>. La
+        consola va a aparecer
+        abajo o a la derecha de la pantalla.
+      <p>Si estás listos para probar un atajo del teclado, apretá <i>'<abbr title="Command">CMD</abbr>+<abbr
+            title="Option">OPT</abbr>+J'</i>
         en Mac, ó <i>'F12'</i> en Windows</p>
     </div>
 
@@ -33,8 +44,9 @@
     <div>
       <ul>
         <li class="website">
-            <span>GitHub</span>
-            <a href="https://github.com/r-argentina-programa/introduccion-a-js" target="_blank">github.com/r-argentina-programa</a>
+          <span>GitHub</span>
+          <a href="https://github.com/r-argentina-programa/introduccion-a-js"
+            target="_blank">github.com/r-argentina-programa</a>
         </li>
       </ul>
     </div>
@@ -69,6 +81,7 @@
     </div>
   </footer>
 
-  <script src="js/nivel1.js"></script>
+  <script src="js/nivel3.js"></script>
 </body>
+
 </html>
