--- a/tareas/clase-5/index.html
+++ b/tareas/clase-5/index.html
@@ -6,8 +6,18 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Clase 5</title>
+    <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
+    <form>
+        <label>Salario mensual:</label>
+        <input type="number" id="salario-anual"/>
+        <button id="boton-calcular">Calcular</button>    
+    </form>
+    <label>Resultado:</label>
+    <input type="text" disabled id="salario-mensual"/>
+
 </body>
+<script src="tarea-clase-5.js"></script>
 </html>
